<?xml version="1.0" encoding="utf-8"?>

<!--
    Assignment 01

    activity_main.xml

    Group 1: Nicholas Boyle, Shawntraree Lucas
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/headerLabel"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/itemPriceLabel"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/itemPriceText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLabel" />

    <EditText
        android:id="@+id/itemPriceText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/itemPriceTextHint"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemPriceLabel"
        app:layout_constraintTop_toBottomOf="@+id/headerLabel" />

    <TextView
        android:id="@+id/saleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/saleLabel"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPriceText" />

    <RadioGroup
        android:id="@+id/saleRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/saleLabel"
        app:layout_constraintTop_toBottomOf="@+id/itemPriceText">

        <RadioButton
            android:id="@+id/radio10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio10" />

        <RadioButton
            android:id="@+id/radio15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio15" />

        <RadioButton
            android:id="@+id/radio18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio18" />

        <RadioButton
            android:id="@+id/radioCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioCustom" />

    </RadioGroup>

    <TextView
        android:id="@+id/customLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/customLabel"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saleRadioGroup" />

    <SeekBar
        android:id="@+id/customSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:max="50"
        android:progress="25"
        app:layout_constraintBottom_toBottomOf="@+id/customLabel"
        app:layout_constraintEnd_toStartOf="@+id/customValue"
        app:layout_constraintStart_toEndOf="@+id/customLabel"
        app:layout_constraintTop_toTopOf="@+id/customLabel" />

    <TextView
        android:id="@+id/customValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/customValue"
        app:layout_constraintBottom_toBottomOf="@+id/customSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/customSeekBar" />

    <TextView
        android:id="@+id/discountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/discountLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customSeekBar" />

    <TextView
        android:id="@+id/discountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/zeroValue"
        app:layout_constraintStart_toEndOf="@+id/discountLabel"
        app:layout_constraintTop_toTopOf="@+id/discountLabel" />

    <TextView
        android:id="@+id/finalPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/finalPriceLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discountLabel" />

    <TextView
        android:id="@+id/finalPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/zeroValue"
        app:layout_constraintStart_toEndOf="@+id/finalPriceLabel"
        app:layout_constraintTop_toTopOf="@+id/finalPriceLabel" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:width="150dp"
        android:text="@string/resetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalPriceLabel" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:width="150dp"
        android:text="@string/calculateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/resetButton" />

</androidx.constraintlayout.widget.ConstraintLayout>